# siger-llm

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENCE  PROJECT_CONTEXT.md  README.md  SECURITY.md  chat_cli.py  main.py  pyproject.toml  repomix-output.md  requirements.txt  serve_api.py  train_pipeline.py
.github/: PULL_REQUEST_TEMPLATE.md
checkpoints/: latest.json
config/: __init__.py  model_config.py  model_identity.py
data/: code.txt  english.txt  indonesian.txt
data_governance/: __init__.py  domain_policy.py  learning_intake.py  privacy_filter.py  prompt_injection_filter.py
docs/: API_INTEGRATION.md  ARCHITECTURE.md  BALANCED_REPAIR.md  CLI.md  CRM_FINANCE_LEARNING_INTAKE.md  DATASET_LICENSE_AUDIT.md  DATA_GOVERNANCE.md  DATA_MINING.md  DISTRIBUTED_TRAINING_ROADMAP.md  EVALUATION.md  EXPERTISE_CURRICULUM.md  IMPLEMENTATION_STATUS.md  INFERENCE.md  INSTALLATION.md  KAGGLE_T4X2_CONTINUE.md  LONG_CONTEXT.md  LORA.md  MODALITY_AGNOSTIC_BACKBONE.md  OPTIMIZATION.md  REASONING_CAPABILITY.md  RUN_COMMANDS.md  SIGER_TRILINGUAL_TRAINING_PLAN.md  SOFTWARE_ENGINEERING_CAPABILITY.md  STRATEGIC_ROADMAP_8TARGETS.md  TOKEN_SAVER.md  TRAINING.md  TRAINING_METHODS_COMBINATION.md  TRAINING_METHODS_QUICKSTART.md  TRAINING_METHODS_SUMMARY.py
evaluation/: __init__.py  benchmarks.py  generation.py  indo_eval.py  lampung_eval.py  lampung_lookup_eval.py  lampung_reasoning.py  perplexity.py  report.py  run_eval.py  run_harness.py  run_lampung_lookup_eval.py  runner.py
inference/: __init__.py  api.py  chat.py  constitutional_ai_layer.py  expertise_router.py  generator.py  lampung_pipeline.py  prompt_builder.py  router.py  sampler.py  security.py  tool_result_compressor.py  user_feedback_collector.py
lora/: __init__.py  config.py  dataset.py  dpo.py  hardware_policy.py  layer.py  merge.py  model.py  run_lora.py  trainer.py
memory/: __init__.py  chunk_store.py  context_manager.py  session_memory.py
modalities/: __init__.py  base.py  registry.py
model/: __init__.py  mamba_model.py  moe.py  norms.py  siger_model.py  ssm_block.py  ssm_core.py
optimization/: __init__.py  autotune.py  benchmark.py  distributed_validation.py  elastic.py  gpu.py  hardware.py  kvcache.py  moe_sizing.py  sharded_checkpoint.py  trainer.py
retrieval/: __init__.py  compositional_translator.py  instruction_lookup.py  (+1 more)
(+189 files in other folders)
