[project]
name = "siger-llm"
version = "0.1.0"
description = "Experimental custom Python LLM framework with Mamba/SSM architecture"
authors = [
    { name = "Syarif soden" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "datasets>=2.19.0",
    "tqdm>=4.66.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "black",
    "isort",
    "mypy"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"