[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siger-llm"
version = "0.1.0"
description = "Experimental custom Python LLM framework with Mamba/SSM architecture"
authors = [
    { name = "Syarif soden" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.2.0",
    "einops>=0.7.0",
    "numpy>=1.26.0",
    "psutil>=5.9.0",
    "tqdm>=4.66.0",
    "tiktoken>=0.6.0",
    "tokenizers>=0.20.0",
    "transformers>=4.45.0,<5.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "datasets>=2.18.0,<3.0.0",
    "huggingface-hub>=0.21.0,<1.0.0",
    "pyarrow>=15.0.0",
    "fsspec>=2024.2.0,<=2024.6.1",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "html5lib>=1.1",
    "pandas>=2.2.0",
    "pymupdf>=1.24.0",
    "orjson>=3.10.0",
    "jsonlines>=4.0.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.18.0",
    "onnxruntime-extensions>=0.9.0",
    "onnxscript>=0.1.0",
    "nltk>=3.8.1",
    "rouge-score>=0.1.2",
]

[project.scripts]
siger = "siger_cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "black",
    "isort",
    "mypy"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.setuptools]
py-modules = ["chat_cli", "main", "train_pipeline"]

[tool.setuptools.packages.find]
include = [
    "config*",
    "evaluation*",
    "inference*",
    "lora*",
    "memory*",
    "modalities*",
    "model*",
    "optimization*",
    "retrieval*",
    "siger_cli*",
    "tokenizer*",
    "training*",
]
